--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.retry:spring-retry'
 	// implementation 'org.springframework.boot:spring-boot-starter-web'
