--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'com.diffplug.gradle.spotless' version '3.27.1'
 }
 
 group = 'com.example'
@@ -40,4 +41,18 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+spotless {
+	format 'java' {
+
+	}
+	java {
+		googleJavaFormat()
+		target '**/*.java, **/*.gradle'
+		importOrder '//#', 'java', 'javax', 'org', 'com', 'net'
+		removeUnusedImports()
+		trimTrailingWhitespace()
+		endWithNewline()
+	}
 }
